from 2.6.6 to 2.6.7
- fixing shell_interaction_emulator class declaration to avoid compilation
  errors and warning under MacOS

from 2.6.5 to 2.6.6
- fixing script that builds windows binary packages to include missing
  cygwin libraries
- fixing bug: dar_manager batch command (-@ option) contains a inverted
  test in a sanity check, leading the execution to systematically abort
  reporting an internal error message.
- fixed message error type when asymmetrical encryption is requested and
  gpgme has not been activated at compilation time
- fixed dar/libdar behavior when gpg binary is not available and gpgme
  has been activated at compilation time. Instead of aborting, dar now
  signal the gpgme error and proposes to retry initialization without
  gpgme support. This makes sense for dar_static binary which stays
  usable in that context when all options have been activated

from 2.6.4 to 2.6.5
- fixed bug: dar crashed when the HOME environment variable was not
  defined (for example running dar from crontab)
- removed useless skip() in cache layer
- cache layer improvement, flushing write pending data before asking
  lower layer about skippability
- fixed bug met when several consecutive compressed files were asked to
  be compressed and failed getting reduced in size by libdar. In that
  situation as expected, libdar tries to skip backward and stores the
  file uncompressed. However the cache layer was introducing an offset
  of a few bytes leading the next file to be written over the end of the
  previous one, which dar reported as data corruption when testing the
  archive.
- updating licensing information with the new address of the FSF
- clarifying message about possibly truncated filename returned by the
  operating system

from 2.6.3 to 2.6.4
- fixed display bug indicating delta signatures were about to be
  calculated even when this was not the case.
- updating dar man page about the fact aes256 replaced blowfish as